# NaxiStudioControl

./: CMakeLists.txt  README.md  main.cpp
backend/: authmanager.cpp  authmanager.h
frontend/: control.cpp  control.h  control.ui
frontend/resources/: control.qrc
